--- a/install-docker.yml
+++ b/install-docker.yml
@@ -15,13 +15,13 @@
       ansible.builtin.file:
         path: /etc/apt/keyrings
         state: directory
-        mode: "0755"
+        mode: '0755'
 
     - name: Download Docker GPG key
       ansible.builtin.get_url:
         url: https://download.docker.com/linux/ubuntu/gpg
         dest: /etc/apt/keyrings/docker.asc
-        mode: "0644"
+        mode: '0644'
 
 - name: Add Docker repository to Apt sources
   hosts: all
@@ -30,10 +30,7 @@
     - name: Add Docker repository
       ansible.builtin.lineinfile:
         path: /etc/apt/sources.list.d/docker.list
-        line: "deb [arline: >-
-          deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.asc]
-          https://download.docker.com/linux/ubuntu
-          {{ ansible_distribution_release }} stablech={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+        line: "deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
       notify: apt update
 
 - name: Install Docker
@@ -54,5 +51,14 @@
       ansible.builtin.user:
         name: "{{ ansible_user }}"
         groups: docker
-        append: true
+        append: yes
       notify: restart docker
+
+handlers:
+  - name: apt update
+    ansible.builtin.command: apt-get update
+
+  - name: restart docker
+    ansible.builtin.service:
+      name: docker
+      state: restarted
