--- a/install-docker.yml
+++ b/install-docker.yml
@@ -15,13 +15,13 @@
       ansible.builtin.file:
         path: /etc/apt/keyrings
         state: directory
-        mode: '0755'
+        mode: "0755"
 
     - name: Download Docker GPG key
       ansible.builtin.get_url:
         url: https://download.docker.com/linux/ubuntu/gpg
         dest: /etc/apt/keyrings/docker.asc
-        mode: '0644'
+        mode: "0644"
 
 - name: Add Docker repository to Apt sources
   hosts: all
@@ -31,7 +31,7 @@
       ansible.builtin.lineinfile:
         path: /etc/apt/sources.list.d/docker.list
         line: "deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
-      notify: apt update
+      notify: Apt update
 
 - name: Install Docker
   hosts: all
@@ -51,14 +51,15 @@
       ansible.builtin.user:
         name: "{{ ansible_user }}"
         groups: docker
-        append: yes
-      notify: restart docker
+        append: true
+      notify: Restart docker
 
-handlers:
-  - name: apt update
-    ansible.builtin.command: apt-get update
+  handlers:
+    - name: Apt update
+      ansible.builtin.apt:
+        update_cache: true
 
-  - name: restart docker
-    ansible.builtin.service:
-      name: docker
-      state: restarted
+    - name: Restart docker
+      ansible.builtin.service:
+        name: docker
+        state: restarted
